--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <ul>
         <strong><li>Email:</strong> <a href="pinkdotdreamer@gmail.com">pinkdotdreamer@gmail.com</a></li>
-        <strong><li>Github:</strong> <a href="https://github.com/DreamReaper64">DreamReaper64</a></li>
+        <strong><li>Github:</strong> <a href="https://github.com/Cragady">Cragady</a></li>
         <strong><li>Portfolio:</strong> <a href="#">coming soon</a></li>
     </ul>
 
